welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:12: error: not found: value max
    if (nums(i) > max){
                  ^extrema:13: error: not found: value max
      max = nums(i);
      ^extrema:15: error: not found: value min
    if ( nums(i) < min ){
                   ^extrema:16: error: not found: value min
      min = nums(i);
      ^extrema:19: error: not found: value max
  return max - min;
         ^extrema:19: error: not found: value min
  return max - min;
               ^