welcome.lessons.welcome.array.search.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
  if ( nums.length == 1 ){
    return 0;
  } else if ( nums(0) > nums(1) ){
    var max:Int = nums(0);
    var min:Int = nums(1);
  } else {
    var max:Int = nums(1);
    var min:Int = nums(0);
  }
  for ( i <- 2 to (nums.length - 1) ){
    if (nums(i) > max){
      max = nums(i);
    } 
    if ( nums(i) < min ){
      min = nums(i);
    }
  }
  return max - min;
}